# AutoCustomizeResume

./: .copier-answers.yml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  REUSE.toml  SECURITY.md  TAGS.md  codecov.yml  config.yaml  justfile  mkdocs.yml  pyproject.toml  renovate.json  sonar-project.properties  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _codeql.yml  _osv-scanner.yml  _security.yml  _trivy-image.yml  ci.yml  codeql.yml  docs.yml  labeler.yml  release.yml  scorecard.yml  weekly.yml
autocustomizeresume/: __main__.py  analyzer.py  assembler.py  cli.py  compiler.py  config.py  cover_letter.py  llm_client.py  model_registry.json  model_registry.py  models.py  namer.py  parser.py  pipeline.py  schemas.py  selector.py  status.py  utils.py  watcher.py
docs/: TAGS.md  index.md
examples/: .env.example  README.md  config.example.yaml  resume.advanced.example.tex  resume.simple.example.tex  sample_config.yaml  sample_resume.tex
src/: __init__.py  config.py  selector.py
src/autocustomizeresume/: __init__.py  __main__.py  analyzer.py  assembler.py  cli.py  compiler.py  config.py  cover_letter.py  exit_codes.py  llm_client.py  logging.py  model_registry.py  models.py  namer.py  parser.py  pipeline.py  schemas.py  selector.py  status.py  utils.py  watcher.py
src/autocustomizeresume/prompts/: cover_letter.md
templates/: cover_letter_template.tex
tests/: __init__.py  conftest.py  test_analyzer.py  test_assembler.py  test_compiler.py  test_cover_letter.py  test_llm_client.py  test_model_registry.py  test_namer.py  test_parser.py  test_pipeline.py  test_selector.py  test_watcher.py
tests/e2e/: test_compiler.py  test_cover_letter.py  test_entrypoint.py
tests/fixtures/: minimal_tagged.tex  sample_tagged.tex
tests/integration/: test_assembler.py  test_cli.py  test_compiler.py  test_cover_letter.py  test_namer.py  test_parser.py  test_watcher.py
tests/unit/: test_analyzer.py  test_assembler.py  test_compiler.py  test_config.py  test_cover_letter.py  test_exit_codes.py  test_llm_client.py  test_logging.py  test_model_registry.py  test_namer.py  test_parser.py  test_pipeline.py  test_selector.py  test_version.py
