# SPDX-FileCopyrightText: 2026 Avish Jha <avish.j@pm.me>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocustomizeresume"
version = "0.1.0"
description = "Auto-customize your LaTeX resume for different jobs using LLM-powered content selection"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
authors = [{ name = "Avish Jha", email = "avish.j@pm.me" }]
keywords = ["resume", "latex", "llm", "cli", "cover-letter", "job-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=4.10.1",
    "rich>=14.3.3",
    "pydantic-settings>=2.13.1",
    "openai>=2.24.0",
    "pypdf>=6.7.4",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/avishj/autocustomizeresume"
Documentation = "https://avishj.github.io/autocustomizeresume"
Repository = "https://github.com/avishj/autocustomizeresume"
Changelog = "https://github.com/avishj/autocustomizeresume/blob/main/CHANGELOG.md"
Issues = "https://github.com/avishj/autocustomizeresume/issues"

[project.scripts]
autocustomizeresume = "autocustomizeresume.cli:entrypoint"

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "commitizen>=4.13.9",
    "complexipy>=5.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autocustomizeresume"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "C90",    # mccabe
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TC",     # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "RUF",    # ruff-specific
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ANN",    # annotations not required in tests
    "D",      # docstrings not required in tests
    "ARG",    # unused arguments (fixtures)
    "PLR2004", # magic values in tests
    "SLF001", # private member access in tests
    "FBT",    # boolean traps in tests
]

[tool.ruff.lint.isort]
known-first-party = ["autocustomizeresume"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty]
python-version = "3.13"

[tool.coverage.run]
source = ["autocustomizeresume"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests exercising multiple components together (e.g. CliRunner)",
    "e2e: end-to-end tests invoking the installed CLI via subprocess",
]
timeout = 60
filterwarnings = ["error"]
xfail_strict = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
