# SPDX-FileCopyrightText: 2026 Avish Jha <avish.j@pm.me>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocustomizeresume"
version = "0.0.1"
description = "Auto-customize your LaTeX resume for different jobs using LLM-powered content selection"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
authors = [{ name = "Avish Jha", email = "avish.j@pm.me" }]
keywords = ["resume", "latex", "llm", "cli", "cover-letter", "job-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=4.10.2",
    "rich>=15.0.0",
    "pydantic-settings>=2.13.1",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/avishj/autocustomizeresume"
Documentation = "https://avishj.github.io/autocustomizeresume"
Repository = "https://github.com/avishj/autocustomizeresume"
Changelog = "https://github.com/avishj/autocustomizeresume/blob/main/CHANGELOG.md"
Issues = "https://github.com/avishj/autocustomizeresume/issues"

[project.scripts]
autocustomizeresume = "autocustomizeresume.cli:entrypoint"

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "complexipy>=5.3.0",
    "mkdocstrings-python>=2.0.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "zensical>=0.0.33",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autocustomizeresume"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ANN",    # annotations not required in tests
    "D",      # docstrings not required in tests
    "ARG",    # unused arguments (fixtures)
    "PLR2004", # magic values in tests
    "FBT",    # boolean traps in tests
]
"tests/e2e/*.py" = [
    "S603",   # subprocess.run is intentional in CLI end-to-end tests
    "S607",   # console scripts from PATH are intentional in CLI end-to-end tests
]

[tool.ruff.lint.isort]
known-first-party = ["autocustomizeresume"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests exercising multiple components together (e.g. CliRunner)",
    "e2e: end-to-end tests invoking the installed CLI via subprocess",
]
timeout = 60
filterwarnings = ["error"]
xfail_strict = true

[tool.coverage.run]
source = ["autocustomizeresume"]
branch = true
parallel = true
relative_files = true
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.commitizen]
version = "0.0.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
